--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
-.DS_Store
-.jpeg
-.JPG
-.JPEG
-.jpg
-.svg
-.mp4
-.mp3
+*.jpeg
+*.JPG
+*.JPEG
+*.jpg
+*.svg
+*.mp4
+*.mp3
+*.png
+*.directory
+*.map
+
